# cinch_fakhri

./: .gcloudignore  .gitignore  Dockerfile  Dockerfile.db  Dockerfile.db-seed  Dockerfile.migration  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6dec139d40e4_create_initial_tables.py
app/: main.py
app/core/: config.py
app/db/: database.py
app/models/: models.py
app/routers/: products.py
app/tests/: conftest.py  test_products.py
app/tests/stubs/alembic/: __init__.pyi  config.pyi
scripts/: init-db.sh  populate_tables.sql  seed_test_data.sql
